# ezsn-notify-email

./: .env.sample  .pre-commit-config.yaml  README.md  Send_Email.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
app/router/config/: settings.py
app/schemas/: Emails.py
src/helper/: SMTP_Helper.py  TEMPLATE_String.py
templates/: invoice.html  substitute.html
tests/: test_add.py  test_dynamic.py  test_smtp_email.py  test_template_string.py
